--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <img src="https://avatars.githubusercontent.com/u/45103265?v=4">
         <h1>Anandhu-J</h1>
-        Hello there, awesome person!
+<img src="https://avatars.githubusercontent.com/u/45103265?v=4">
+
     </body>
 </html>
