--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <body>
         <img src="https://avatars.githubusercontent.com/u/45103265?v=4">
         <h1>Anandhu-J</h1>
-<img src="https://avatars.githubusercontent.com/u/45103265?v=4">
-
+        Hello there, awesome person!
     </body>
 </html>
