--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
         <img src="https://avatars.githubusercontent.com/u/45103265?v=4">
         <h1>Anandhu-J</h1>
         Hello there, awesome person!
+        <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
     </body>
 </html>
