--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
     <head>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <img src="https://avatars.githubusercontent.com/u/45103265?v=4">
